--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -28,10 +31,17 @@ body {
 
 }
 
-.apresentacao__conteudo_titulo {
+.apresentacao__conteudo__titulo {
     font-size: 36px;
+    font-family:'Krona One', sans-serif;
 }
 
-.apresentacao__conteudo__texto {
+.apresentacao__conteudo_texto {
     font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.apresentacao__links {
+    display: flex;
+    justify-content: space-between;
 }
